the image is not being centered because text-align center no longer controls alignment like it does in normal flow.

--- a/17 flexbox/style.css
+++ b/17 flexbox/style.css
@@ -6,17 +6,9 @@
       background-color: lightblue;
       display: flex;
       flex-direction: column;
-
-
-  }
-
-  a {
-      height: 20px;
-      padding: 10px;
-      background-color: lightcoral;
       text-align: center;
   }
 
   img {
-      height: 100px;
+      width: 100px;
   }
